--- a/src/Pages/Pokedex.css
+++ b/src/Pages/Pokedex.css
@@ -1,29 +1,79 @@
 body{
     margin: 0;
-    background-color: rgb(255, 255, 255);
-    color: black;
+    background-color: #f3f3f3;
+    color: #252525;
 }
 
 ul{
     list-style: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     gap: 50px;
+    padding: 0;
+}
+
+.container {
+    max-width: 80vw;
+}
+
+.list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .pokemon-container {
     padding: 10px;
-    box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.267);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    width: 300px;
-    background-color: white;
+    width: 200px;
+    background-color: #f3f3f3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: cnet;
+    
 
 }
 
 .pokemon-container:hover{
     scale: 1.1;
     background-color: white;
+}
+.pokemon-image {
+    height: 120px;
+    width: auto;
+    max-width: 100%;
+}
+.pokemon-types {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.pokemon-types img {
+    height: 30px;
+    width: auto;
+    max-width: 100%;
+}
+
+.type-pill {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    justify-content: flex-start;
+}
+
+.pagination{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
 }
